# powerbi-dataset-uploader

./: .gitignore  README.md  demo.py  setup.cfg
src/powerbi_dataset_uploader/: __init__.py  uploader.py
