[metadata]
name = powerbi-dataset-uploader
version = 0.0.1.dev1
author = Pan Piotrek
description = quick and dirty facade for PowerBI API to easily access it in Python for PushDatasets 
long_description = quick and dirty facade for PowerBI API to easily access it in Python for PushDatasets 
long_description_content_type = text/markdown
url = https://github.com/Piotr12/powerbi-dataset-uploader
project_urls =
    Bug Tracker = https://github.com/powerbi-dataset-uploader/dummit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    msal

[options.packages.find]
where = src